text-align bug fixed

--- a/src/Enquiry.css
+++ b/src/Enquiry.css
@@ -1,7 +1,4 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
+
 .pop-up-form {
   margin-top: 5rem;
 }
